[project]
name = "pykoclaw"
version = "0.1.0"
description = "Python CLI AI agent"
requires-python = ">=3.12"
dependencies = ["claude-agent-sdk", "click", "croniter", "pydantic", "pydantic-settings"]

[project.scripts]
pykoclaw = "pykoclaw.__main__:main"

[dependency-groups]
dev = ["pytest"]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
